<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeqDB Reader</string>
    
    <string name="config_file">seqdb_barcode_scanner.properties</string>
    
    <string name="txt_main_header">SeqDB Reader</string>
    <string name="txt_action_settings">Settings</string>
    
    <string name="txt_btn_lookup">Lookup</string>
    <string name="txt_btn_getcontents">Get Contents</string>
    <string name="txt_btn_move">Move</string>
    <string name="txt_btn_bulkmove">Bulk Move</string>
    <string name="txt_btn_login">LOGIN</string>
    
    <string name="txt_btn_scan_done">Barcode Done</string>
    
    <string name="txt_btn_scan_login">Scan Barcode</string>
    <string name="txt_btn_manual_login">Manual Login</string>
	
    <string name="txt_login_username">Username</string>
    <string name="txt_login_password">Password</string>
    
    
    <string name="txt_scan_login_header">Login using your barcode</string>
    <string name="txt_manual_login_header">Login using your username and password</string>
    
     <string name="desc"></string>
     <string name="no_data">No Data</string>
     
    <string name="txt_well_info">Well Info</string>
    <string name="txt_well_row">Row</string>
    <string name="txt_well_col">Column</string>
    
    <string name="txt_btn_wellinfo">Use Well Info</string>
    <string name="txt_btn_wellignore">Ignore for autofill</string>
     
</resources>
