<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
        
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/white"
	    android:orientation="vertical" >
	
	    <include
	        android:id="@+id/main_menu_header"
	        layout="@layout/header_main_layout" />

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent" >

	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="0dip"
	                android:layout_weight="1"
	                android:orientation="vertical" >
	            </LinearLayout>

	            <ImageView
	                android:id="@+id/imageView1"
	                android:layout_width="wrap_content"
	                android:layout_height="120dp"
	                android:layout_gravity="center"
	                android:layout_margin="@dimen/dim_20"
	                android:src="@drawable/ico_lookup" />

	            <Button
	                android:id="@+id/btn_lookup"
	                
	                android:layout_margin="@dimen/dim_20"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:minHeight="60dp"
	                style="@style/Button_Blue"
	                android:text="@string/txt_btn_lookup"
	                android:textColor="@color/white"
	                android:textSize="24sp"
	                android:textStyle="bold" />

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="0dip"
	                android:layout_weight="1"
	                android:orientation="vertical" >
	            </LinearLayout>

	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical" >

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="0dip"
	                android:layout_weight="1"
	                android:orientation="vertical" >
	            </LinearLayout>

	            <ImageView
	                android:id="@+id/imageView2"
	                android:layout_width="121dp"
	                android:layout_height="121dp"
	                android:layout_gravity="center"
	                android:layout_margin="@dimen/dim_20"
	                android:src="@drawable/ico_document" />

	            <Button
	                android:id="@+id/btn_getContents"
	                android:layout_margin="@dimen/dim_20"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:minHeight="60dp"
	                style="@style/Button_Blue"
	                android:text="@string/txt_btn_getcontents"
	                android:textColor="@color/white"
	                android:textSize="24sp"
	                android:textStyle="bold" />

	            <LinearLayout
	                android:layout_width="match_parent"
	                android:layout_height="0dip"
	                android:layout_weight="1"
	                android:orientation="vertical" >
	            </LinearLayout>

	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical" >
				
	            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            android:orientation="vertical" >
	            </LinearLayout>
	            
	            <ImageView
	                android:id="@+id/imageView3"
	                android:layout_width="120dp"
	                android:layout_height="120dp"
	                android:layout_gravity="center"
	                android:layout_margin="@dimen/dim_20"
	                android:src="@drawable/ico_upload" />

	            <Button
	                android:id="@+id/btn_move"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_margin="@dimen/dim_20"
	                android:minHeight="60dp"
	                android:text="@string/txt_btn_move"
	                android:textColor="@color/white"
	                style="@style/Button_Blue"
	                android:textSize="24sp"
	                android:textStyle="bold" />
	            
	            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            android:orientation="vertical" >
	            </LinearLayout>

	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="0dp"
	            android:layout_height="match_parent"
	            android:layout_weight="1"
	            android:orientation="vertical" >
				
	            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            android:orientation="vertical" >
	            </LinearLayout>

	            <ImageView
	                android:id="@+id/imageView4"
	                android:layout_width="120dp"
	                android:layout_height="120dp"
	                android:layout_gravity="center"
	                android:layout_margin="@dimen/dim_20"
	                android:src="@drawable/ico_truck" />

	            <Button
	                android:id="@+id/btn_bulkMove"
	                android:layout_margin="@dimen/dim_20"
                    android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                style="@style/Button_Blue"
	                android:minHeight="60dp"
	                android:text="@string/txt_btn_bulkmove"
	                android:textColor="@color/white"
	                android:textSize="24sp"
	                android:textStyle="bold" />
	            <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="0dip"
	            android:layout_weight="1"
	            android:orientation="vertical" >
	            </LinearLayout>

	        </LinearLayout>
	    </LinearLayout>
 	
	</LinearLayout>

</RelativeLayout>
